--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
-    "mongoose": "^5.4.17"
+    "mongoose": "^5.4.17",
+    "randomstring": "^1.1.5"
   }
 }
